# libpocket

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/libmoc_example/: MainActivity.kt
example/lib/: main.dart
lib/: libmoc.dart  libmoc_bindings_generated.dart
src/: CMakeLists.txt  Makefile  binary.c  binary.h  callback.c  callback.h  client.c  client.h  domme.c  domme.h  global.h  libmoc.c  libmoc.h  mfile.c  mfile.h  mnet.c  mnet.h  omusic.c  omusic.h  packet.c  packet.h  pocket.c  pocket.h  server.c  server.h  timer.c  timer.h  troublemaker.c
